--- a/style.css
+++ b/style.css
@@ -18,28 +18,54 @@ body{
   .calculator {
     display: flex;
     flex-direction: column;
-    height: 600px;
-    width: 500px;
+    width: 400px;
     border-radius: 25px;
     padding: 20px;
     box-shadow: 0px 0px 20px rgba(255, 255, 255, 0.3);
-    border: 1px solid black;
     background-color: rgba(0, 0, 0, 0.89);
   }
   
 
   .display{   
     display: flex;
+    flex-direction: column;
     justify-content: flex-end;
-    align-items: center;
-    min-height: 120px;
+    align-items: flex-end;
+    min-height: 100px;
     background-color: lightcyan;
     border-radius: 10px;
-    border: none;
     padding: 20px;
     margin-bottom: 20px;
-    font-size: 2em;
+    overflow: hidden;
   }
+
+  .history {   
+    font-size: 1em;
+    color: gray;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis; 
+    text-align: right; 
+    margin-bottom: 5px;     
+ }
+
+ .current {   
+    font-size: 2rem;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis; 
+    text-align: right;    
+    max-width: 90%;
+ }
+
+ .current.long.text {   
+    font-size: 1.5em; 
+ }
+
+ .current.longer.text {   
+    font-size: 1.2em; 
+ }
+
 
 .buttons{
     display: flex;
@@ -51,18 +77,23 @@ body{
     padding: 20px;
     flex: 1 0 21%;
     border-radius: 5px;
-    font-size: 1.5rem;
+    font-size: 1.6rem;
     border: none;
     cursor: pointer;
     
   }
   
   .btn[data-value="0" ]{
-    flex: 1 0 48%;
+    flex: 1 0 49%;
 }
 
 .btn[data-action="clear"], 
 .btn[data-action="delete"]{
+    background-color: lightpink;
+    font-weight: 550;
+}
+
+.btn[data-action="plusminus"]{
     background-color: lightpink;
     font-weight: 550;
 }
@@ -120,4 +151,27 @@ body{
 .btn[data-action="decimal"]{
     background-color: lightyellow;
     font-weight: 550;
+}
+
+.btn{
+    transition: background-color 0.1s ease, transform o.1% ease;
+  }
+  .btn:hover{
+    background-color: aliceblue;
+  }
+
+  .btn:active{
+    transform: scale (0.95);
+}
+
+@media (max-width: 480px) {
+    .calculator {
+        width: 90%;
+        padding: 15px;
+    }
+
+    .btn {
+        padding: 15px;
+        font-size: 1.2rem; 
+    } 
 }
